problemas con edit

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1334,7 +1334,7 @@ EditSolicitudesInternetRequiredMessage_status=The Status field is required.
 EditSolicitudesInternetTitle_status=Status
 EditSolicitudesInternetLabel_controlsolicitudes=Controlsolicitudes:
 EditSolicitudesInternetTitle_controlsolicitudes=Controlsolicitudes
-ViewSolicitudesInternetTitle=View
+ViewSolicitudesInternetTitle=Detalles de la solicitud
 ViewSolicitudesInternetDestroyLink=Destroy
 ViewSolicitudesInternetEditLink=Edit
 ViewSolicitudesInternetCreateLink=Create New SolicitudesInternet
