--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1,15 +1,143 @@
 PersistenceErrorOccured=A persistence error occurred.
-Create=Create
-View=View
-Edit=Edit
+Create=Crear
+View=Mostrar
+Edit=Editar
 Delete=Delete
-Close=Close
-Cancel=Cancel
-Save=Save
+Close=Cerrar
+Cancel=Cancelar
+Save=Guardar
 SelectOneMessage=Select One...
 Home=Home
 Maintenance=Maintenance
 AppName=ermex
+
+BotonSiguiente=Siguiente
+BotonAtras=Atr\u00e1s
+
+ImagenesPanel=Selecciona las im\u00e1genes correspondientes
+PersonasGDPanel=Detalles del Designador y del Gestor
+DetallesPanel=Detalles
+
+InformacionTitle=Informaci\u00f3n
+ConfirmacionTitle=Confirmaci\u00f3n
+ImagenesTitle=Im\u00e1genes
+ImagenTitle=Imagen
+
+DependenciaTitle=Dependencia
+OrganismoTitle=Organismo
+InstitucionTitle=Instituci\u00f3n
+PersonasTitle=Persona
+PersonaTitle=Personas
+GestorTitle=Gestor
+UsuarioTitle=Usuario
+
+DependenciaLabel=Dependencia:
+OrganismoLabel=Organismo:
+InstitucionLabel=Instituci\u00f3n:
+PersonasLabel=Persona:
+
+
+
+
+GestoresLabel_gestor=Usuario:
+GestoresTitle_gestor=Usuario
+GestoresInput_gestor=Usuario del Gestor
+GestoresRequiredMessage_gestor=Es necesario ingresar el Usuario
+GestoresValidatorMessage_gestor=El gestor debe ser ermex**** *->digitos
+GestoresLabel_oficio=Oficio:
+GestoresTitle_oficio=Oficio
+GestoresInput_oficio=Oficio externo
+GestoresLabel_fechaOficio=Fecha de Oficio:
+GestoresTitle_fechaOficio=Fecha de Oficio
+GestoresLabel_pwdftp=Constrase\u00f1a FTP:
+GestoresTitle_pwdftp=PWD-FTP
+GestoresValidatorMessage_pwdftp=La contrase\u00f1a debe ser de 9 digitos 0-9 A-Z a-z
+GestoresLabel_pwdwms=Constrase\u00f1a WMS:
+GestoresTitle_pwdwms=PWD-WMS
+GestoresLabel_fechaEnviouser=Fecha de Env\u00edo (usuario):
+GestoresTitle_fechaEnviouser=Fecha de Env\u00edo (usuario)
+GestoresLabel_fechaInicio=Fecha de Inicio:
+GestoresTitle_fechaInicio=Fecha de Inicio
+GestoresLabel_fechaFin=Fecha Fin:
+GestoresTitle_fechaFin=Fecha Fin
+GestoresLabel_status=Status:
+GestoresTitle_status=Status
+GestoresInput_status=Estado del gestor
+GestoresLabel_designacion=Designaci\u00f3n:
+GestoresTitle_designacion=Designaci\u00f3n
+GestoresInput_designacion=Oficio de designaci\u00f3n del gestor
+GestoresLabel_idpersona=Gestor:
+GestoresTitle_idpersona=Gestor
+GestoresLabel_designador=Designador:
+GestoresTitle_designador=Designador
+
+GestoresLabel_idorganismo=Idorganismo:
+GestoresTitle_idorganismo=Idorganismo
+GestoresLabel_descripcion1=Descripcion1:
+GestoresTitle_descripcion1=Descripcion1
+GestoresLabel_descripcion2=Descripcion2:
+GestoresTitle_descripcion2=Descripcion2
+GestoresLabel_estado=Estado:
+GestoresTitle_estado=Estado
+GestoresLabel_municipio=Municipio:
+GestoresTitle_municipio=Municipio
+
+
+PersonasRequiredMessage_nombre:Es necesario ingresar el nombre
+PersonasTitle_dependencia=Dependencia de la nueva persona
+PersonasTitle_organismo=Organismo de la nueva persona
+PersonasTitle_institucion=Institucion de la nueva persona
+PersonasLabel_tipo=Tipo:
+PersonasTitle_tipo=Tipo
+PersonasLabel_curp=Curp:
+PersonasTitle_curp=Curp
+PersonasLabel_nombre=Nombre:
+PersonasTitle_nombre=Nombre
+PersonasLabel_apellidop=Apellido Paterno:
+PersonasTitle_apellidop=Apellido Paterno
+PersonasLabel_apellidom=Apellido Materno:
+PersonasTitle_apellidom=Apellido Materno
+PersonasLabel_grado=Grado:
+PersonasTitle_grado=Grado
+PersonasLabel_cargo=Cargo:
+PersonasTitle_cargo=Cargo
+PersonasLabel_correo1=Correo Institucional 1:
+PersonasTitle_correo1=Correo Institucional 1
+PersonasLabel_correo2=Correo Institucional 2:
+PersonasTitle_correo2=Correo Institucional 2:
+PersonasLabel_correo3=Correo Personal:
+PersonasTitle_correo3=Correo Personal
+PersonasLabel_telefono=Tel\u00e9fono:
+PersonasTitle_telefono=Tel\u00e9fono
+PersonasLabel_domicilioOficina=Domicilio de Oficina:
+PersonasTitle_domicilioOficina=Domicilio de Oficina
+PersonasLabel_telpersonal=Tel\u00e9fono Personal:
+PersonasTitle_telpersonal=Tel\u00e9fono Personal
+PersonasLabel_dompersonal=Domicilio Personal:
+PersonasTitle_dompersonal=Domicilio Personal
+PersonasLabel_idoficialanv=Identificaci\u00f3n Oficial Anverso: 
+PersonasTitle_idoficialanv=IDENTIFICACI\u00d3N OFICIAL ANVERSO
+PersonasLabel_idoficialrev=Identificaci\u00f3n Oficial Reverso:
+PersonasTitle_idoficialrev=IDENTIFICACI\u00d3N OFICIAL REVERSO
+PersonasLabel_credoficialanv=Credencial Oficial Anverso:
+PersonasTitle_credoficialanv=CREDENCIAL OFICIAL ANVERSO
+PersonasLabel_credoficialrev=Credencial Oficial Reverso:
+PersonasTitle_credoficialrev=CREDENCIAL OFICIAL REVERSO
+PersonasLabel_imgcurp=CURP:
+PersonasTitle_imgcurp=CURP
+PersonasLabel_foto=Foto:
+PersonasTitle_foto=FOTO
+PersonasLabel_huellapulgar=Huella del Pulgar:
+PersonasTitle_huellapulgar=HUELLA DEL PULGAR
+PersonasLabel_huellamanoizq=Huella mano izquierda:
+PersonasTitle_huellamanoizq=HUELLA MANO IZQUIERDA
+PersonasLabel_huellamanoder=Huella mano derecha:
+PersonasTitle_huellamanoder=HUELLA MANO DERECHA
+PersonasLabel_nombramiento=Nombramiento:
+PersonasTitle_nombramiento=NOMBRAMIENTO
+PersonasLabel_idinstitucion=Id Institucion:
+PersonasTitle_idinstitucion=Id Institucion
+
 
 ControlsolicitudesCreated=Controlsolicitudes was successfully created.
 ControlsolicitudesUpdated=Controlsolicitudes was successfully updated.
@@ -247,10 +375,10 @@ ListDocumentosnotasTitle_notapdf=Notapdf
 ListDocumentosnotasTitle_relacionimg=Relacionimg
 ListDocumentosnotasTitle_acuse=Acuse
 ListDocumentosnotasTitle_idnota=Idnota
-GestoresCreated=Gestores was successfully created.
-GestoresUpdated=Gestores was successfully updated.
+GestoresCreated=El Gestor se cre\u00f3 con \u00e9xito.
+GestoresUpdated=El Gestor se modific\u00f3 con \u00e9xito.
 GestoresDeleted=Gestores was successfully deleted.
-CreateGestoresTitle=Create New Gestores
+CreateGestoresTitle=Crear Nuevo Gestor
 CreateGestoresSaveLink=Save
 CreateGestoresShowAllLink=Show All Gestores Items
 CreateGestoresIndexLink=Index
@@ -329,7 +457,7 @@ EditGestoresLabel_idpersona=Idpersona:
 EditGestoresTitle_idpersona=Idpersona
 EditGestoresLabel_designador=Designador:
 EditGestoresTitle_designador=Designador
-ViewGestoresTitle=View
+ViewGestoresTitle=Mostrar
 ViewGestoresDestroyLink=Destroy
 ViewGestoresEditLink=Edit
 ViewGestoresCreateLink=Create New Gestores
@@ -369,18 +497,18 @@ ViewGestoresLabel_idpersona=Idpersona:
 ViewGestoresTitle_idpersona=Idpersona
 ViewGestoresLabel_designador=Designador:
 ViewGestoresTitle_designador=Designador
-ListGestoresTitle=List
+ListGestoresTitle=Lista de Gestores
 ListGestoresEmpty=(No Gestores Items Found)
 ListGestoresDestroyLink=Destroy
 ListGestoresEditLink=Edit
 ListGestoresViewLink=View
 ListGestoresCreateLink=Create New Gestores
 ListGestoresIndexLink=Index
-ListGestoresTitle_gestor=Gestor
+ListGestoresTitle_gestor=Usuario
 ListGestoresTitle_oficio=Oficio
-ListGestoresTitle_fechaOficio=FechaOficio
-ListGestoresTitle_pwdftp=Pwdftp
-ListGestoresTitle_pwdwms=Pwdwms
+ListGestoresTitle_fechaOficio=Fecha de Oficio
+ListGestoresTitle_pwdftp=PWD FTP
+ListGestoresTitle_pwdwms=PWD WMS
 ListGestoresTitle_fechaEnviouser=FechaEnviouser
 ListGestoresTitle_fechaInicio=FechaInicio
 ListGestoresTitle_fechaFin=FechaFin
@@ -834,11 +962,11 @@ ListPersonalatencionusuariosTitle_puesto=Puesto
 ListPersonalatencionusuariosTitle_usuario=Usuario
 ListPersonalatencionusuariosTitle_pwd=Pwd
 ListPersonalatencionusuariosTitle_status=Status
-PersonasCreated=Personas was successfully created.
-PersonasUpdated=Personas was successfully updated.
+PersonasCreated=La persona se cre\u00f3 con \u00e9xito.
+PersonasUpdated=La persona se modific\u00f3 con \u00e9xito.
 PersonasDeleted=Personas was successfully deleted.
-CreatePersonasTitle=Create New Personas
-CreatePersonasSaveLink=Save
+CreatePersonasTitle=Crear Nueva Persona
+CreatePersonasSaveLink=Guardar
 CreatePersonasShowAllLink=Show All Personas Items
 CreatePersonasIndexLink=Index
 CreatePersonasLabel_idpersona=Idpersona:
@@ -894,14 +1022,14 @@ CreatePersonasLabel_nombramiento=Nombramiento:
 CreatePersonasTitle_nombramiento=Nombramiento
 CreatePersonasLabel_idinstitucion=Idinstitucion:
 CreatePersonasTitle_idinstitucion=Idinstitucion
-EditPersonasTitle=Edit Personas
-EditPersonasSaveLink=Save
-EditPersonasViewLink=View
-EditPersonasShowAllLink=Show All Personas Items
+EditPersonasTitle=Modificar Persona
+EditPersonasSaveLink=Guardar
+EditPersonasViewLink=Mostrar
+EditPersonasShowAllLink=Muestra todas las Personas
 EditPersonasIndexLink=Index
 EditPersonasLabel_idpersona=Idpersona:
-EditPersonasRequiredMessage_idpersona=The Idpersona field is required.
-EditPersonasTitle_idpersona=Idpersona
+EditPersonasRequiredMessage_idpersona=Es necesario el id de la persona.
+EditPersonasTitle_idpersona=IdPersona
 EditPersonasLabel_tipo=Tipo:
 EditPersonasTitle_tipo=Tipo
 EditPersonasLabel_curp=Curp:
