--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -12,6 +12,8 @@ Maintenance=Maintenance
 AppName=ermex
 PieErmex=Estaci\u00f3n de Recepci\u00f3n M\u00e9xico Nueva Generaci\u00f3n, ERMEX , M\u00c9XICO - \u00a9 - 2016 
 PieDir=22a. Zona militar carretera Toluca-Tenango km. 19.5 Paraje Rancho Sanabria , Santa Mar\u00eda Ray\u00f3n , Estado de M\u00e9xico
+MessageQuitarImagen=* Da click en la imagen para quitarla
+MessageRequired=* Estos datos son necesarios
 BotonSiguiente=Siguiente
 BotonAtras=Atr\u00e1s
 
