--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -114,25 +114,34 @@ PersonasLabel_idpersona:Id Persona:
 PersonasTitle_idpersona:Id Persona
 PersonasLabel_tipo=Tipo:
 PersonasTitle_tipo=Tipo
-PersonasLabel_curp=Curp:
-PersonasTitle_curp=Curp
+PersonasLabel_curp=CURP:
+PersonasTitle_curp=CURP
+PersonasValidatorMessage_curp:La CURP no es valida o debe estar vacia 
 PersonasLabel_nombre=Nombre:
-PersonasTitle_nombre=Nombre
+PersonasTitle_nombre=Nombre 
 PersonasRequiredMessage_nombre:Es necesario ingresar el nombre
+PersonasValidatorMessage_nombre:El nombre no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_apellidop=Apellido Paterno:
 PersonasTitle_apellidop=Apellido Paterno
+PersonasRequiredMessage_apellidop:Es necesario ingresar el Apellido Paterno
+PersonasValidatorMessage_apellidop:El Apellido Paterno no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_apellidom=Apellido Materno:
 PersonasTitle_apellidom=Apellido Materno
+PersonasValidatorMessage_apellidom:El Apellido Materno no debe contener caracteres especiales como $,%,^ solo acepta .-
 PersonasLabel_grado=Grado:
 PersonasTitle_grado=Grado
 PersonasLabel_cargo=Cargo:
 PersonasTitle_cargo=Cargo
 PersonasLabel_correo1=Correo Institucional 1:
 PersonasTitle_correo1=Correo Institucional 1
+PersonasRequiredMessage_correo1:Es necesario ingresar el Correo Institucional 1
+PersonasValidatorMessage_correo1=El correo no es valido
 PersonasLabel_correo2=Correo Institucional 2:
 PersonasTitle_correo2=Correo Institucional 2:
+PersonasValidatorMessage_correo2=El Correo Institucional 2 no es valido o debe estar vacia
 PersonasLabel_correo3=Correo Personal:
 PersonasTitle_correo3=Correo Personal
+PersonasValidatorMessage_correo3=El Correo Personal no es valido o debe estar vacia
 PersonasLabel_telefono=Tel\u00e9fono:
 PersonasTitle_telefono=Tel\u00e9fono
 PersonasLabel_domicilioOficina=Domicilio de Oficina:
@@ -179,7 +188,7 @@ GestoresLabel_gestor=Usuario:
 GestoresTitle_gestor=Usuario
 GestoresInput_gestor=Usuario del Gestor
 GestoresRequiredMessage_gestor=Es necesario ingresar el Usuario
-GestoresValidatorMessage_gestor=El gestor debe ser ermex**** *->digitos
+GestoresValidatorMessage_gestor=El gestor debe contener ermex y 4 digitos ej. "ermex0000" 
 GestoresLabel_oficio=Oficio:
 GestoresTitle_oficio=Oficio
 GestoresInput_oficio=Oficio externo
@@ -187,9 +196,10 @@ GestoresLabel_fechaOficio=Fecha de Oficio:
 GestoresTitle_fechaOficio=Fecha de Oficio
 GestoresLabel_pwdftp=Constrase\u00f1a FTP:
 GestoresTitle_pwdftp=PWD-FTP
-GestoresValidatorMessage_pwdftp=La contrase\u00f1a debe ser de 9 digitos 0-9 A-Z a-z
+GestoresValidatorMessage_pwdftp=La contrase\u00f1a debe contener 9 digitos (0-9 A-Z a-z) \u00f3 Debe estar vacia
 GestoresLabel_pwdwms=Constrase\u00f1a WMS:
 GestoresTitle_pwdwms=PWD-WMS
+GestoresValidatorMessage_pwdwms=La contrase\u00f1a debe contener 9 digitos (0-9 A-Z a-z) \u00f3 Debe estar vacia
 GestoresLabel_fechaEnviouser=Fecha de Env\u00edo (usuario):
 GestoresTitle_fechaEnviouser=Fecha de Env\u00edo (usuario)
 GestoresLabel_fechaInicio=Fecha de Inicio:
