--- a/src/main/resources/BundleCatalogoImg.properties
+++ b/src/main/resources/BundleCatalogoImg.properties
@@ -18,49 +18,55 @@ CreateCatalogoimagenesTitle=Create New Catalogoimagenes
 CreateCatalogoimagenesSaveLink=Save
 CreateCatalogoimagenesShowAllLink=Show All Catalogoimagenes Items
 CreateCatalogoimagenesIndexLink=Index
-CreateCatalogoimagenesLabel_idcatalogoimg=Idcatalogoimg:
-CreateCatalogoimagenesRequiredMessage_idcatalogoimg=The Idcatalogoimg field is required.
-CreateCatalogoimagenesTitle_idcatalogoimg=Idcatalogoimg
 CreateCatalogoimagenesLabel_satelite=Satelite:
 CreateCatalogoimagenesTitle_satelite=Satelite
-CreateCatalogoimagenesLabel_modo=Modo:
-CreateCatalogoimagenesTitle_modo=Modo
+CreateCatalogoimagenesLabel_tipo=Tipo:
+CreateCatalogoimagenesTitle_tipo=Tipo
 CreateCatalogoimagenesLabel_nivel=Nivel:
 CreateCatalogoimagenesTitle_nivel=Nivel
-CreateCatalogoimagenesLabel_character=Character:
-CreateCatalogoimagenesTitle_character=Character
+CreateCatalogoimagenesLabel_status=Status:
+CreateCatalogoimagenesTitle_status=Status
+CreateCatalogoimagenesLabel_identificador=Identificador:
+CreateCatalogoimagenesRequiredMessage_identificador=The Identificador field is required.
+CreateCatalogoimagenesTitle_identificador=Identificador
+CreateCatalogoimagenesLabel_resolucion=Resolucion:
+CreateCatalogoimagenesTitle_resolucion=Resolucion
 EditCatalogoimagenesTitle=Edit Catalogoimagenes
 EditCatalogoimagenesSaveLink=Save
 EditCatalogoimagenesViewLink=View
 EditCatalogoimagenesShowAllLink=Show All Catalogoimagenes Items
 EditCatalogoimagenesIndexLink=Index
-EditCatalogoimagenesLabel_idcatalogoimg=Idcatalogoimg:
-EditCatalogoimagenesRequiredMessage_idcatalogoimg=The Idcatalogoimg field is required.
-EditCatalogoimagenesTitle_idcatalogoimg=Idcatalogoimg
 EditCatalogoimagenesLabel_satelite=Satelite:
 EditCatalogoimagenesTitle_satelite=Satelite
-EditCatalogoimagenesLabel_modo=Modo:
-EditCatalogoimagenesTitle_modo=Modo
+EditCatalogoimagenesLabel_tipo=Tipo:
+EditCatalogoimagenesTitle_tipo=Tipo
 EditCatalogoimagenesLabel_nivel=Nivel:
 EditCatalogoimagenesTitle_nivel=Nivel
-EditCatalogoimagenesLabel_character=Character:
-EditCatalogoimagenesTitle_character=Character
+EditCatalogoimagenesLabel_status=Status:
+EditCatalogoimagenesTitle_status=Status
+EditCatalogoimagenesLabel_identificador=Identificador:
+EditCatalogoimagenesRequiredMessage_identificador=The Identificador field is required.
+EditCatalogoimagenesTitle_identificador=Identificador
+EditCatalogoimagenesLabel_resolucion=Resolucion:
+EditCatalogoimagenesTitle_resolucion=Resolucion
 ViewCatalogoimagenesTitle=View
 ViewCatalogoimagenesDestroyLink=Destroy
 ViewCatalogoimagenesEditLink=Edit
 ViewCatalogoimagenesCreateLink=Create New Catalogoimagenes
 ViewCatalogoimagenesShowAllLink=Show All Catalogoimagenes Items
 ViewCatalogoimagenesIndexLink=Index
-ViewCatalogoimagenesLabel_idcatalogoimg=Idcatalogoimg:
-ViewCatalogoimagenesTitle_idcatalogoimg=Idcatalogoimg
 ViewCatalogoimagenesLabel_satelite=Satelite:
 ViewCatalogoimagenesTitle_satelite=Satelite
-ViewCatalogoimagenesLabel_modo=Modo:
-ViewCatalogoimagenesTitle_modo=Modo
+ViewCatalogoimagenesLabel_tipo=Tipo:
+ViewCatalogoimagenesTitle_tipo=Tipo
 ViewCatalogoimagenesLabel_nivel=Nivel:
 ViewCatalogoimagenesTitle_nivel=Nivel
-ViewCatalogoimagenesLabel_character=Character:
-ViewCatalogoimagenesTitle_character=Character
+ViewCatalogoimagenesLabel_status=Status:
+ViewCatalogoimagenesTitle_status=Status
+ViewCatalogoimagenesLabel_identificador=Identificador:
+ViewCatalogoimagenesTitle_identificador=Identificador
+ViewCatalogoimagenesLabel_resolucion=Resolucion:
+ViewCatalogoimagenesTitle_resolucion=Resolucion
 ListCatalogoimagenesTitle=List
 ListCatalogoimagenesEmpty=(No Catalogoimagenes Items Found)
 ListCatalogoimagenesDestroyLink=Destroy
@@ -68,8 +74,9 @@ ListCatalogoimagenesEditLink=Edit
 ListCatalogoimagenesViewLink=View
 ListCatalogoimagenesCreateLink=Create New Catalogoimagenes
 ListCatalogoimagenesIndexLink=Index
-ListCatalogoimagenesTitle_idcatalogoimg=Idcatalogoimg
 ListCatalogoimagenesTitle_satelite=Satelite
-ListCatalogoimagenesTitle_modo=Modo
+ListCatalogoimagenesTitle_tipo=Tipo
 ListCatalogoimagenesTitle_nivel=Nivel
-ListCatalogoimagenesTitle_character=Character
+ListCatalogoimagenesTitle_status=Status
+ListCatalogoimagenesTitle_identificador=Identificador
+ListCatalogoimagenesTitle_resolucion=Resolucion
