--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -21,6 +21,7 @@ ImagenesPanel=Selecciona las im\u00e1genes correspondientes
 PersonasGDPanel=Detalles del Designador y del Gestor
 DetallesPanel=Detalles
 
+AccesoTitle=Acceso
 InformacionTitle=Informaci\u00f3n
 ConfirmacionTitle=Confirmaci\u00f3n
 ImagenesTitle=Im\u00e1genes
