--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -185,6 +185,7 @@ ListGestoresEmpty=(No se encontraron Gestores)
 GestoresTitle_dependencia=Dependencia para el gestor
 GestoresTitle_organismo=Organismo para el gestor
 GestoresTitle_institucion=Instituci\u00f3n para el gestor
+GestoresRequiredMessage_institucion=Es necesario seleccionar la Instituci\u00f3n
 GestoresLabel_gestor=Usuario:
 GestoresTitle_gestor=Usuario
 GestoresInput_gestor=Usuario del Gestor
