--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -16,6 +16,10 @@ MessageQuitarImagen=* Da click en la imagen para quitarla
 MessageRequired=* Estos datos son necesarios
 BotonSiguiente=Siguiente
 BotonAtras=Atr\u00e1s
+FilterExact=exacto
+FilterStartsWith=empieza
+FilterContains=contiene
+FilterNunguno=ninguno
 
 ImagenesPanel=Selecciona las im\u00e1genes correspondientes
 PersonasGDPanel=Detalles del Designador y del Gestor
@@ -151,14 +155,14 @@ PersonasLabel_telpersonal=Tel\u00e9fono Personal:
 PersonasTitle_telpersonal=Tel\u00e9fono Personal
 PersonasLabel_dompersonal=Domicilio Personal:
 PersonasTitle_dompersonal=Domicilio Personal
-PersonasLabel_idoficialanv=Identificaci\u00f3n Oficial Anverso: 
-PersonasTitle_idoficialanv=IDENTIFICACI\u00d3N OFICIAL ANVERSO
-PersonasLabel_idoficialrev=Identificaci\u00f3n Oficial Reverso:
-PersonasTitle_idoficialrev=IDENTIFICACI\u00d3N OFICIAL REVERSO
-PersonasLabel_credoficialanv=Credencial Oficial Anverso:
-PersonasTitle_credoficialanv=CREDENCIAL OFICIAL ANVERSO
-PersonasLabel_credoficialrev=Credencial Oficial Reverso:
-PersonasTitle_credoficialrev=CREDENCIAL OFICIAL REVERSO
+PersonasLabel_idoficialanv=Identificaci\u00f3n Oficial Anv: 
+PersonasTitle_idoficialanv=IDENTIFICACI\u00d3N OFICIAL ANV
+PersonasLabel_idoficialrev=Identificaci\u00f3n Oficial Rev:
+PersonasTitle_idoficialrev=IDENTIFICACI\u00d3N OFICIAL REV
+PersonasLabel_credoficialanv=Credencial Oficial Anv:
+PersonasTitle_credoficialanv=CREDENCIAL OFICIAL ANV
+PersonasLabel_credoficialrev=Credencial Oficial Rev:
+PersonasTitle_credoficialrev=CREDENCIAL OFICIAL REV
 PersonasLabel_imgcurp=CURP:
 PersonasTitle_imgcurp=CURP
 PersonasLabel_foto=Foto:
@@ -202,8 +206,8 @@ GestoresValidatorMessage_pwdftp=La contrase\u00f1a debe contener 9 digitos (0-9 
 GestoresLabel_pwdwms=Constrase\u00f1a WMS:
 GestoresTitle_pwdwms=PWD-WMS
 GestoresValidatorMessage_pwdwms=La contrase\u00f1a debe contener 9 digitos (0-9 A-Z a-z) \u00f3 Debe estar vacia
-GestoresLabel_fechaEnviouser=Fecha de Env\u00edo (usuario):
-GestoresTitle_fechaEnviouser=Fecha de Env\u00edo (usuario)
+GestoresLabel_fechaEnviouser=Env\u00edo de usuario:
+GestoresTitle_fechaEnviouser=Env\u00edo de usuario
 GestoresLabel_fechaInicio=Fecha de Inicio:
 GestoresTitle_fechaInicio=Fecha de Inicio
 GestoresLabel_fechaFin=Fecha Fin:
