--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -233,6 +233,64 @@ GestoresTitle_estado=Estado
 GestoresLabel_municipio=Municipio:
 GestoresTitle_municipio=Municipio
 
+RatificacionesCreated=La ratificaci\u00f3n se cre\u00f3 con \u00e9xito.
+RatificacionesUpdated=La ratificaci\u00f3n se modific\u00f3 con \u00e9xito.
+RatificacionesDeleted=La ratificaci\u00f3n se elimin\u00f3 con \u00e9xito.
+CreateRatificacionesTitle=Crear Nueva Ratificaci\u00f3n
+EditRatificacionesTitle=Editar Ratificaci\u00f3n
+ViewRatificacionesTitle=Ver Ratificaci\u00f3n
+ListRatificacionesTitle=Lista de Ratificaciones
+ListRatificacionesEmpty=(No se encontraron Ratificaciones)
+RatificacionesLabel_idratificacion=Id ratificaci\u00f3n:
+RatificacionesRequiredMessage_idratificacion=Es necesario ingresar el Id Ratificaci\u00f3n
+RatificacionesTitle_idratificacion=Id ratificaci\u00f3n
+RatificacionesLabel_anio=A\u00f1o:
+RatificacionesRequiredMessage_anio=Es necesario ingresar el A\u00f1o.
+RatificacionesTitle_anio=A\u00f1o
+RatificacionesLabel_inicio=Inicio:
+RatificacionesTitle_inicio=Inicio
+RatificacionesLabel_fin=Fin:
+RatificacionesTitle_fin=Fin
+RatificacionesLabel_responsables=Responsable SIAP:
+RatificacionesTitle_responsables=Responsable SIAP
+RatificacionesLabel_responsablee=Responsable ERMEX:
+RatificacionesTitle_responsablee=Responsable ERMEX
+RatificacionesLabel_comentarios=Comentarios:
+RatificacionesTitle_comentarios=Comentarios
+RatificacionesLabel_status=Status:
+RatificacionesTitle_status=Status
+
+ProcesoratificacionCreated=El Proceso de Ratificaci\u00f3n se cre\u00f3 con \u00e9xito.
+ProcesoratificacionUpdated=El Proceso de Ratificaci\u00f3n se modific\u00f3 con \u00e9xito.
+ProcesoratificacionDeleted=El Proceso de Ratificaci\u00f3n se elimin\u00f3 con \u00e9xito.
+CreateProcesoratificacionTitle=Crear un nuevo Proceso de Ratificaci\u00f3n
+EditProcesoratificacionTitle=Editar Proceso de Ratificaci\u00f3n
+ViewProcesoratificacionTitle=Ver Proceso de Ratificaci\u00f3n
+ListProcesoratificacionTitle=Lista de Procesos de Ratificaci\u00f3n
+ListProcesoratificacionEmpty=(No se encontraron Procesos de Ratificaci\u00f3n)
+ProcesoratificacionLabel_idprocesor=Id Proceso R:
+ProcesoratificacionRequiredMessage_idprocesor=Es necesario ingresar el Id. Proceso R.
+ProcesoratificacionTitle_idprocesor=Id Proceso R
+ProcesoratificacionLabel_freceprati=Recepci\u00f3n Ratificaci\u00f3n:
+ProcesoratificacionTitle_freceprati=Recepci\u00f3n Ratificaci\u00f3n
+ProcesoratificacionLabel_cambios=Cambios:
+ProcesoratificacionTitle_cambios=Cambios
+ProcesoratificacionLabel_status=Status:
+ProcesoratificacionTitle_status=Status
+ProcesoratificacionLabel_comentarios=Comentarios:
+ProcesoratificacionTitle_comentarios=Comentarios
+ProcesoratificacionLabel_fechaEnvioclaves=Envio de claves:
+ProcesoratificacionTitle_fechaEnvioclaves=Envio de claves
+ProcesoratificacionLabel_fechaConficlaves=Confirmaci\u00f3n de claves:
+ProcesoratificacionTitle_fechaConficlaves=Confirmaci\u00f3n de claves
+ProcesoratificacionLabel_proceso=Proceso:
+ProcesoratificacionTitle_proceso=Proceso
+ProcesoratificacionLabel_documentacion=Documentaci\u00f3n:
+ProcesoratificacionTitle_documentacion=Documentaci\u00f3n
+ProcesoratificacionLabel_idratificacion=Id Ratificaci\u00f3n:
+ProcesoratificacionTitle_idratificacion=Id Ratificaci\u00f3n
+ProcesoratificacionLabel_gestor=Gestor:
+ProcesoratificacionTitle_gestor=Gestor
 
 ControlsolicitudesCreated=Controlsolicitudes was successfully created.
 ControlsolicitudesUpdated=Controlsolicitudes was successfully updated.
@@ -752,195 +810,6 @@ ListPersonalatencionusuariosTitle_puesto=Puesto
 ListPersonalatencionusuariosTitle_usuario=Usuario
 ListPersonalatencionusuariosTitle_pwd=Pwd
 ListPersonalatencionusuariosTitle_status=Status
-ProcesoratificacionCreated=Procesoratificacion was successfully created.
-ProcesoratificacionUpdated=Procesoratificacion was successfully updated.
-ProcesoratificacionDeleted=Procesoratificacion was successfully deleted.
-CreateProcesoratificacionTitle=Create New Procesoratificacion
-CreateProcesoratificacionSaveLink=Save
-CreateProcesoratificacionShowAllLink=Show All Procesoratificacion Items
-CreateProcesoratificacionIndexLink=Index
-CreateProcesoratificacionLabel_idprocesor=Idprocesor:
-CreateProcesoratificacionRequiredMessage_idprocesor=The Idprocesor field is required.
-CreateProcesoratificacionTitle_idprocesor=Idprocesor
-CreateProcesoratificacionLabel_freceprati=Freceprati:
-CreateProcesoratificacionTitle_freceprati=Freceprati
-CreateProcesoratificacionLabel_cambios=Cambios:
-CreateProcesoratificacionTitle_cambios=Cambios
-CreateProcesoratificacionLabel_status=Status:
-CreateProcesoratificacionTitle_status=Status
-CreateProcesoratificacionLabel_comentarios=Comentarios:
-CreateProcesoratificacionTitle_comentarios=Comentarios
-CreateProcesoratificacionLabel_fechaEnvioclaves=FechaEnvioclaves:
-CreateProcesoratificacionTitle_fechaEnvioclaves=FechaEnvioclaves
-CreateProcesoratificacionLabel_fechaConficlaves=FechaConficlaves:
-CreateProcesoratificacionTitle_fechaConficlaves=FechaConficlaves
-CreateProcesoratificacionLabel_proceso=Proceso:
-CreateProcesoratificacionTitle_proceso=Proceso
-CreateProcesoratificacionLabel_documentacion=Documentacion:
-CreateProcesoratificacionTitle_documentacion=Documentacion
-CreateProcesoratificacionLabel_idratificacion=Idratificacion:
-CreateProcesoratificacionTitle_idratificacion=Idratificacion
-CreateProcesoratificacionLabel_gestor=Gestor:
-CreateProcesoratificacionTitle_gestor=Gestor
-EditProcesoratificacionTitle=Edit Procesoratificacion
-EditProcesoratificacionSaveLink=Save
-EditProcesoratificacionViewLink=View
-EditProcesoratificacionShowAllLink=Show All Procesoratificacion Items
-EditProcesoratificacionIndexLink=Index
-EditProcesoratificacionLabel_idprocesor=Idprocesor:
-EditProcesoratificacionRequiredMessage_idprocesor=The Idprocesor field is required.
-EditProcesoratificacionTitle_idprocesor=Idprocesor
-EditProcesoratificacionLabel_freceprati=Freceprati:
-EditProcesoratificacionTitle_freceprati=Freceprati
-EditProcesoratificacionLabel_cambios=Cambios:
-EditProcesoratificacionTitle_cambios=Cambios
-EditProcesoratificacionLabel_status=Status:
-EditProcesoratificacionTitle_status=Status
-EditProcesoratificacionLabel_comentarios=Comentarios:
-EditProcesoratificacionTitle_comentarios=Comentarios
-EditProcesoratificacionLabel_fechaEnvioclaves=FechaEnvioclaves:
-EditProcesoratificacionTitle_fechaEnvioclaves=FechaEnvioclaves
-EditProcesoratificacionLabel_fechaConficlaves=FechaConficlaves:
-EditProcesoratificacionTitle_fechaConficlaves=FechaConficlaves
-EditProcesoratificacionLabel_proceso=Proceso:
-EditProcesoratificacionTitle_proceso=Proceso
-EditProcesoratificacionLabel_documentacion=Documentacion:
-EditProcesoratificacionTitle_documentacion=Documentacion
-EditProcesoratificacionLabel_idratificacion=Idratificacion:
-EditProcesoratificacionTitle_idratificacion=Idratificacion
-EditProcesoratificacionLabel_gestor=Gestor:
-EditProcesoratificacionTitle_gestor=Gestor
-ViewProcesoratificacionTitle=View
-ViewProcesoratificacionDestroyLink=Destroy
-ViewProcesoratificacionEditLink=Edit
-ViewProcesoratificacionCreateLink=Create New Procesoratificacion
-ViewProcesoratificacionShowAllLink=Show All Procesoratificacion Items
-ViewProcesoratificacionIndexLink=Index
-ViewProcesoratificacionLabel_idprocesor=Idprocesor:
-ViewProcesoratificacionTitle_idprocesor=Idprocesor
-ViewProcesoratificacionLabel_freceprati=Freceprati:
-ViewProcesoratificacionTitle_freceprati=Freceprati
-ViewProcesoratificacionLabel_cambios=Cambios:
-ViewProcesoratificacionTitle_cambios=Cambios
-ViewProcesoratificacionLabel_status=Status:
-ViewProcesoratificacionTitle_status=Status
-ViewProcesoratificacionLabel_comentarios=Comentarios:
-ViewProcesoratificacionTitle_comentarios=Comentarios
-ViewProcesoratificacionLabel_fechaEnvioclaves=FechaEnvioclaves:
-ViewProcesoratificacionTitle_fechaEnvioclaves=FechaEnvioclaves
-ViewProcesoratificacionLabel_fechaConficlaves=FechaConficlaves:
-ViewProcesoratificacionTitle_fechaConficlaves=FechaConficlaves
-ViewProcesoratificacionLabel_proceso=Proceso:
-ViewProcesoratificacionTitle_proceso=Proceso
-ViewProcesoratificacionLabel_documentacion=Documentacion:
-ViewProcesoratificacionTitle_documentacion=Documentacion
-ViewProcesoratificacionLabel_idratificacion=Idratificacion:
-ViewProcesoratificacionTitle_idratificacion=Idratificacion
-ViewProcesoratificacionLabel_gestor=Gestor:
-ViewProcesoratificacionTitle_gestor=Gestor
-ListProcesoratificacionTitle=List
-ListProcesoratificacionEmpty=(No Procesoratificacion Items Found)
-ListProcesoratificacionDestroyLink=Destroy
-ListProcesoratificacionEditLink=Edit
-ListProcesoratificacionViewLink=View
-ListProcesoratificacionCreateLink=Create New Procesoratificacion
-ListProcesoratificacionIndexLink=Index
-ListProcesoratificacionTitle_idprocesor=Idprocesor
-ListProcesoratificacionTitle_freceprati=Freceprati
-ListProcesoratificacionTitle_cambios=Cambios
-ListProcesoratificacionTitle_status=Status
-ListProcesoratificacionTitle_comentarios=Comentarios
-ListProcesoratificacionTitle_fechaEnvioclaves=FechaEnvioclaves
-ListProcesoratificacionTitle_fechaConficlaves=FechaConficlaves
-ListProcesoratificacionTitle_proceso=Proceso
-ListProcesoratificacionTitle_documentacion=Documentacion
-ListProcesoratificacionTitle_idratificacion=Idratificacion
-ListProcesoratificacionTitle_gestor=Gestor
-RatificacionesCreated=Ratificaciones was successfully created.
-RatificacionesUpdated=Ratificaciones was successfully updated.
-RatificacionesDeleted=Ratificaciones was successfully deleted.
-CreateRatificacionesTitle=Create New Ratificaciones
-CreateRatificacionesSaveLink=Save
-CreateRatificacionesShowAllLink=Show All Ratificaciones Items
-CreateRatificacionesIndexLink=Index
-CreateRatificacionesLabel_idratificacion=Idratificacion:
-CreateRatificacionesRequiredMessage_idratificacion=The Idratificacion field is required.
-CreateRatificacionesTitle_idratificacion=Idratificacion
-CreateRatificacionesLabel_anio=Anio:
-CreateRatificacionesRequiredMessage_anio=The Anio field is required.
-CreateRatificacionesTitle_anio=Anio
-CreateRatificacionesLabel_inicio=Inicio:
-CreateRatificacionesTitle_inicio=Inicio
-CreateRatificacionesLabel_fin=Fin:
-CreateRatificacionesTitle_fin=Fin
-CreateRatificacionesLabel_responsables=Responsables:
-CreateRatificacionesTitle_responsables=Responsables
-CreateRatificacionesLabel_responsablee=Responsablee:
-CreateRatificacionesTitle_responsablee=Responsablee
-CreateRatificacionesLabel_comentarios=Comentarios:
-CreateRatificacionesTitle_comentarios=Comentarios
-CreateRatificacionesLabel_status=Status:
-CreateRatificacionesTitle_status=Status
-EditRatificacionesTitle=Edit Ratificaciones
-EditRatificacionesSaveLink=Save
-EditRatificacionesViewLink=View
-EditRatificacionesShowAllLink=Show All Ratificaciones Items
-EditRatificacionesIndexLink=Index
-EditRatificacionesLabel_idratificacion=Idratificacion:
-EditRatificacionesRequiredMessage_idratificacion=The Idratificacion field is required.
-EditRatificacionesTitle_idratificacion=Idratificacion
-EditRatificacionesLabel_anio=Anio:
-EditRatificacionesRequiredMessage_anio=The Anio field is required.
-EditRatificacionesTitle_anio=Anio
-EditRatificacionesLabel_inicio=Inicio:
-EditRatificacionesTitle_inicio=Inicio
-EditRatificacionesLabel_fin=Fin:
-EditRatificacionesTitle_fin=Fin
-EditRatificacionesLabel_responsables=Responsables:
-EditRatificacionesTitle_responsables=Responsables
-EditRatificacionesLabel_responsablee=Responsablee:
-EditRatificacionesTitle_responsablee=Responsablee
-EditRatificacionesLabel_comentarios=Comentarios:
-EditRatificacionesTitle_comentarios=Comentarios
-EditRatificacionesLabel_status=Status:
-EditRatificacionesTitle_status=Status
-ViewRatificacionesTitle=View
-ViewRatificacionesDestroyLink=Destroy
-ViewRatificacionesEditLink=Edit
-ViewRatificacionesCreateLink=Create New Ratificaciones
-ViewRatificacionesShowAllLink=Show All Ratificaciones Items
-ViewRatificacionesIndexLink=Index
-ViewRatificacionesLabel_idratificacion=Idratificacion:
-ViewRatificacionesTitle_idratificacion=Idratificacion
-ViewRatificacionesLabel_anio=Anio:
-ViewRatificacionesTitle_anio=Anio
-ViewRatificacionesLabel_inicio=Inicio:
-ViewRatificacionesTitle_inicio=Inicio
-ViewRatificacionesLabel_fin=Fin:
-ViewRatificacionesTitle_fin=Fin
-ViewRatificacionesLabel_responsables=Responsables:
-ViewRatificacionesTitle_responsables=Responsables
-ViewRatificacionesLabel_responsablee=Responsablee:
-ViewRatificacionesTitle_responsablee=Responsablee
-ViewRatificacionesLabel_comentarios=Comentarios:
-ViewRatificacionesTitle_comentarios=Comentarios
-ViewRatificacionesLabel_status=Status:
-ViewRatificacionesTitle_status=Status
-ListRatificacionesTitle=List
-ListRatificacionesEmpty=(No Ratificaciones Items Found)
-ListRatificacionesDestroyLink=Destroy
-ListRatificacionesEditLink=Edit
-ListRatificacionesViewLink=View
-ListRatificacionesCreateLink=Create New Ratificaciones
-ListRatificacionesIndexLink=Index
-ListRatificacionesTitle_idratificacion=Idratificacion
-ListRatificacionesTitle_anio=Anio
-ListRatificacionesTitle_inicio=Inicio
-ListRatificacionesTitle_fin=Fin
-ListRatificacionesTitle_responsables=Responsables
-ListRatificacionesTitle_responsablee=Responsablee
-ListRatificacionesTitle_comentarios=Comentarios
-ListRatificacionesTitle_status=Status
 SolicitudesInternetCreated=SolicitudesInternet was successfully created.
 SolicitudesInternetUpdated=SolicitudesInternet was successfully updated.
 SolicitudesInternetDeleted=SolicitudesInternet was successfully deleted.
