--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1119,3 +1119,7 @@ ListSolicitudesInternetTitle_fechaVentanilla=FechaVentanilla
 ListSolicitudesInternetTitle_justificacion=Justificacion
 ListSolicitudesInternetTitle_status=Status
 ListSolicitudesInternetTitle_controlsolicitudes=Controlsolicitudes
+EditControlsolicitudesAsignarResponsable=Asignar Rsponsable 
+
+
+Aceptar=Aceptar
