--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -16,6 +16,10 @@ MessageQuitarImagen=* Da click en la imagen para quitarla
 MessageRequired=* Estos datos son necesarios
 BotonSiguiente=Siguiente
 BotonAtras=Atr\u00e1s
+BotonYes=Si
+BotonNo=No
+MsjConfirmacion=\u00bfEstas seguro de realizar esta acci\u00f3n?
+Confirmacion=Confirmaci\u00f3n
 FilterExact=exacto
 FilterStartsWith=empieza
 FilterContains=contiene
