asignar Responsable desde solicitudes de internet problemas con la persistencia

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -994,5 +994,6 @@ ListSolicitudesInternetTitle_status=Status
 ListSolicitudesInternetTitle_controlsolicitudes=Controlsolicitudes
 EditControlsolicitudesAsignarResponsable=Asignar Rsponsable 
 
-
+AsignarSolicitud= Asignar Solicitud
 Aceptar=Aceptar
+Solicitud=Solicitud
